# delta-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  delta-digest-final-plan.md  pyproject.toml
docs/plans/: 2026-03-06-pdf-design.md  2026-03-06-pdf-impl-plan.md  2026-03-06-podcast-design.md  2026-03-06-podcast-impl-plan.md  2026-03-07-glossary-design.md  2026-03-07-glossary-impl-plan.md  2026-03-07-slack-langfilter-timetravel-weekly.md
scripts/: check_bronze.py  run_daily.sh  test_bronze.py  test_gold.py  test_podcast.py  test_silver.py  test_spark.py
src/: run_daily.py  run_weekly.py
src/agents/: glossary_agent.py  llm_client.py  router.py  scorer.py  scriptwriter.py  summarizer.py
src/common/: config.py  logging.py  models.py
src/ingestion/: arxiv_collector.py  base.py  github_collector.py  hn_collector.py  rss_collector.py  run_all.py  sources.yaml
src/output/: markdown_writer.py  pdf_writer.py  podcast_producer.py  slack_notifier.py
src/output/templates/: digest.html.j2  digest.md.j2  glossary.html.j2
src/pipeline/: bronze.py  gold.py  schemas.py  silver.py  spark_session.py
tests/test_agents/: test_glossary_agent.py  test_scriptwriter.py
tests/test_output/: test_pdf_writer.py  test_podcast_producer.py
tests/test_pipeline/: test_gold_quota.py
